[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
description = "Parameterized templates for Kubernetes manifests."
homepage = "https://github.com/InQuicker/ktmpl"
keywords = ["kubernetes"]
license = "MIT"
name = "ktmpl"
readme = "README.md"
repository = "https://github.com/InQuicker/ktmpl"
version = "0.2.1"

[dependencies]
base64 = "0.1.1"
clap = "2.5.1"
lazy_static = "0.2.1"
regex = "0.1.71"
yaml-rust = "0.3.2"
