[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
description = "Parameterized templates for Kubernetes manifests."
homepage = "https://github.com/InQuicker/ktmpl"
keywords = ["kubernetes"]
license = "MIT"
name = "ktmpl"
readme = "README.md"
repository = "https://github.com/InQuicker/ktmpl"
version = "0.5.0"

[dependencies]
base64 = "0.2.1"
clap = "2.11.3"
lazy_static = "0.2.1"
regex = "0.1.75"
yaml-rust = "0.3.3"

[[bin]]
name = "ktmpl"
doc = false
