[package]
authors = ["Jimmy Cuadra <jimmy@jimmycuadra.com>"]
description = "Parameterized templates for Kubernetes manifests."
homepage = "https://github.com/InQuicker/ktmpl"
keywords = ["kubernetes"]
license = "MIT"
name = "ktmpl"
readme = "README.md"
repository = "https://github.com/InQuicker/ktmpl"
version = "0.7.0"

[[bin]]
doc = false
name = "ktmpl"

[dependencies]
base64 = "0.4.0"
clap = "2.20.5"
lazy_static = "0.2.4"
regex = "0.2.1"
yaml-rust = "0.3.5"
